# hack_svg

./: .gitignore  Cargo.toml
rgb_json/: frank_tr12.json  franky_24x24.json  franky_mar14.json  franky_mar16.json  franky_monet_mar25.json
rgb_json/MaryBlaze_V7/: mb_cray_apr_23_v7_op.json
src/: KromaConstants.rs  Sample3x3_DataForTest.txt  adjacent_tiles.rs  array_loc_8x10_mosaic.rs  code_snippets.rs  constants.rs  dfs_arr.rs  dfs_tiles.rs  four_tile_square.rs  main.rs  modtile.rs  mosaic_tile.rs  mosaic_tile_svg_utils.rs  nine_tile_square.rs  one_44_tile.rs  pane_build_utils.rs  pts_mosaic_tile.rs  reshape.rs  single_tile.rs  six_tile_rect.rs  sixteen_tile_square.rs  svg_utils.rs  svg_utils_workingFeb22.rs  twenty5_tile_square.rs  two_op_line_tiles.rs  two_op_lines_tile_panels.rs  two_tile_horiz.rs
src/moved_code/: FuncCalledWithFunctParameter.rs  code_snippet_removedfrom.txt  compareNeighbours_NDArray.rs  create_contig_path.rs  dfs_arr.rs  fn combine_pane_edges.rs  get_matching_row_indices.rs  get_rows_with_pattern_v2.rs  get_rows_with_pattern_v2_option_match_this.rs  pv_eb_hack.rs  roxml_tree.rs  svg_binpack_util.rs  svg_dfs_layout_two.rs  svg_fdg_layout.rs
src/svg_tests/: four_tile_square.rs  mary_blaze.rs  mod.rs  nine_tile_square.rs  one_44_tile.rs  single_tile.rs  six_tile_rect.rs  sixteen_tile_square.rs  twenty5_tile_square.rs  two_op_line_tiles.rs  two_tile_horiz.rs
