[package]
name = "hack_svg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
euclid = "*"
ego-tree = "*"
clap = "*"
printpdf = "*"
serde = { version = "1.0.104", features = ["derive"] }
#serde = "*"
serde_json = "*"
itertools = "*"
regex = "*"
ndarray = "*"
svg = "*"

